--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,17 @@
       href="https://fonts.googleapis.com/css2?family=Archivo&family=Archivo+Narrow:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet">
       <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-B427FS9J6F"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B427FS9J6F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
 
-        gtag('config', 'G-B427FS9J6F');
-      </script>
+      gtag('config', 'G-B427FS9J6F');
+      gtag('event', 'login', {
+        'value': 'test',
+      })
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
